# cdevent

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  devenv.nix
.github/workflows/: release.yml
cdevent/: Cargo.toml
cdevent/src/: main.rs  service.rs
src/: args.rs  main.rs  service.rs
