[package]
name = "cdevent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdevents-sdk = { git = "https://github.com/cdevents/sdk-rust", branch = "main" }
clap = { version = "4.5.7", features = ["color"] }
config = "0.14.0"
reqwest = "0.12.5"
cloudevents-sdk = "0.7.0"
serde_json = "1.0.127"
log = "0.4.22"